ascCFN.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Ascension Server",

  "Mappings" : {
    "RegionMap" : {
      "us-west-1"      : { "64" : "ami-31490d51" },
      "ap-southeast-2" : { "64" : "ami-dc361ebf" },
      "ap-southeast-1" : { "64" : "ami-a59b49c6" },
      "us-east-1" : { "64" : "ami-6869aa05" },
      "us-west-2" : { "64" : "ami-7172b611" },
      "eu-central-1" : { "64" : "ami-ea26ce85" },
      "eu-west-1" : { "64" : "ami-f9dd458a" }
    }
  },

  "Resources": {
    "AscensionVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "172.31.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true"
      }
    },

    "AscensionSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.16.0/20",
        "AvailabilityZone" : {
          "Fn::Select" : [ "0", { "Fn::GetAZs" : "" } ]
        },
        "VpcId": {
          "Ref": "AscensionVPC"
        }
      }
    },

    "AscensionSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.31.0.0/20",
        "AvailabilityZone" : {
          "Fn::Select" : [ "1", { "Fn::GetAZs" : "" } ]
        },
        "VpcId": {
          "Ref": "AscensionVPC"
        }
      }
    },


    "AscensionSubnetAssociation1" : {
       "Type" : "AWS::EC2::SubnetRouteTableAssociation",
       "Properties" : {
          "RouteTableId" : {
              "Ref": "AscensionRTB"
          },
          "SubnetId" :  {
              "Ref": "AscensionSubnet1"
          }
       }
    },

    "AscensionSubnetAssociation2" : {
       "Type" : "AWS::EC2::SubnetRouteTableAssociation",
       "Properties" : {
          "RouteTableId" : {
              "Ref": "AscensionRTB"
          },
          "SubnetId" :  {
              "Ref": "AscensionSubnet2"
          }
       }
    }, 

    "AscensionIgw": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
      }
    },

    "AscensionInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "64"]},
        "InstanceType": "t2.micro",
        "KeyName": "ascServerAus",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name", "Value": {"Fn::Join" : [ "-", [ "Ascension", { "Ref" : "AWS::Region" }] ]}
          },
          {
            "Key": "Region", "Value": { "Ref" : "AWS::Region" }
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "AscensionSubnet1"
            },
            "GroupSet": [
              {
                "Ref": "sgAscTCPServerSecGroup"
              }
            ]
          }
        ]
      }
    },

    "sgAscTCPServerSecGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "TCP 25565",
        "VpcId": {
          "Ref": "AscensionVPC"
        }
      }
    },

    "AscensionGW": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "AscensionVPC"
        },
        "InternetGatewayId": {
          "Ref": "AscensionIgw"
        }
      }
    },
    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "AscensionRTB"
        },
        "GatewayId": {
          "Ref": "AscensionIgw"
        }
      },
      "DependsOn": "AscensionGW"
    },
    "AscensionRTB": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "AscensionVPC"
        }
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgAscTCPServerSecGroup"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "AscensionServerInbound": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgAscTCPServerSecGroup"
        },
        "IpProtocol": "tcp",
        "FromPort": "25565",
        "ToPort": "25565",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "AscensionServerOutbound": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgAscTCPServerSecGroup"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  }
}
